fixing alignment on header again

--- a/responsive.css
+++ b/responsive.css
@@ -26,7 +26,7 @@
 
 	.header__title {
 		font-size: 2.5em;
-		margin: .5em 0 0 .5em;
+		margin: .7em 0 0 .5em;
 	}
 
 	.hamburger {
@@ -73,7 +73,7 @@
 
 	.header__title {
 		font-size: 2em;
-		margin: .7em 0 0 .5em;
+		margin: 1em 0 0 .5em;
 	}
 }
 
